fixed horizontal scrollbar bugs, added responsive css

--- a/src/style.less
+++ b/src/style.less
@@ -1,5 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Creepster&family=Lilita+One&display=swap");
 
+// debuggin baybee
+// * {
+//   outline: 1px solid red;
+// }
+
 .scary-tinder {
   margin: auto;
   font-family: "Lilita One";
@@ -9,6 +14,7 @@
   div {
     font-family: Creepster;
     padding-bottom: .3em;
+    margin: .4em;
   }
 }
 
@@ -73,6 +79,7 @@ em {
 
   center {
     padding: 1em;
+    overflow: hidden;
   }
 
   img {
@@ -81,8 +88,8 @@ em {
     bottom: 0;
     left: 0;
     right: 0;
-    max-width: 100%;
-    max-height: 100%;
+    max-width: 70%;
+    max-height: 70%;
   }
 }
 
@@ -120,11 +127,16 @@ em {
 }
 
 .chat-section {
-  padding: 1em;
   padding-bottom: 2em;
   background-color: white;
   border-radius: 2em;
-  margin: 1em;
+}
+
+@media screen and (min-width: 500px) {
+  .chat-section {
+    padding: 1em;
+    margin: 1em;
+  }
 }
 
 .date {
@@ -175,7 +187,6 @@ body {
   color: white;
   position: relative;
   background: #44acf7;
-  padding: 0.5em 1em 1em;
   border-radius: 0.4em;
 
   &:after {
@@ -199,7 +210,6 @@ body {
   position: relative;
   color: black;
   background: #e5e5ea;
-  padding: 0.5em 1em 1em;
   border-radius: 0.4em;
 
   &:after {
@@ -215,6 +225,26 @@ body {
     border-bottom: 0;
     margin-top: -0.437em;
     margin-right: -0.875em;
+  }
+}
+
+@media screen and (min-width: 500px) {
+  .speech-bubble-christopher {
+    padding: 0.5em 1em 1em;
+  }
+
+  .speech-bubble-kristen {
+    padding: 0.5em 1em 1em;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .speech-bubble-christopher {
+    padding: 0.5em .4em 1em;
+  }
+
+  .speech-bubble-kristen {
+    padding: 0.5em .4em 1em;
   }
 }
 
